upgrade java 25, spring-boot 4, gradle 9